Fixed video not showing on video posts.

--- a/assets/styles/single.scss
+++ b/assets/styles/single.scss
@@ -36,7 +36,7 @@ article {
 .single-body-container {
   display: grid;
   grid-template-areas: "socials content advertisement";
-  grid-template-columns: 14rem minmax(0, 38rem) 14rem;
+  grid-template-columns: 10rem minmax(0, 40rem) 10rem;
   gap: 1rem;
   .socials-container {
     grid-area: socials;
@@ -160,6 +160,12 @@ article {
       font-size: 0.875rem;
     }
   }
+}
+
+.wp-block-embed iframe {
+  width: 100%;
+  height: auto;
+  aspect-ratio: 16 / 9;
 }
 
 /* media queries */
